k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: code-analyzer
spec: {}
status: {}
