k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: centralized-ingress
  namespace: code-analyzer
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /notes
        pathType: Prefix
        backend:
          service:
            name: flask-notes
            port:
              number: 5000
      - path: /bedrock
        pathType: Prefix
        backend:
          service:
            name: bedrock
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
